--- a/flashcard.html
+++ b/flashcard.html
@@ -99,13 +99,13 @@
   <article class="flashcard" aria-label="Flashcard com imagens">
     <div class="card-inner">
       <div class="card-front">
-        <img class="card-image" src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/AdobeStock_185218200.jpeg" alt="Mão segurando lata de spray, pintando um muro.">
+        <img class="card-image" src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/AdobeStock_185218200.jpeg">
         <div class="card-description">
           #ParaTodosVerem A imagem mostra a mão de uma pessoa segurando uma lata de spray preta com tampa laranja, aplicando tinta laranja sobre uma parede de tijolos.
         </div>
       </div>
       <div class="card-back">
-        <img class="card-image" src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/Mural_Etnias,_Panorama_(Eduardo_Kobra).jpg" alt="Mural urbano com retratos de pessoas no estilo de Eduardo Kobra.">
+        <img class="card-image" src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/Mural_Etnias,_Panorama_(Eduardo_Kobra).jpg">
         <div class="card-description">
            #ParaTodosVerem A imagem mostra um extenso mural urbano ocupando toda a lateral de um grande paredão curvo em uma área pública aberta. O mural é composto por retratos de pessoas pintados com cores vivas e contrastantes, usando formas geométricas, uma característica marcante do estilo do artista Eduardo Kobra.
         </div>
