--- a/flashcard.html
+++ b/flashcard.html
@@ -65,14 +65,15 @@
 
     .card-image {
       max-width: 100%; /* Garante que a imagem não transborde */
-      max-height: 70%; /* Limita a altura da imagem para deixar espaço para a descrição */
+      max-height: 95%; /* Aumenta a altura da imagem, já que não há mais descrição visível */
       height: auto;
       border-radius: 10px;
       object-fit: contain; /* Garante que a imagem seja totalmente visível sem cortar */
-      margin-bottom: 15px; /* Espaço entre a imagem e a descrição */
+      margin-bottom: 0; /* Remove a margem extra */
     }
 
     .card-description {
+      /* Esta classe não é mais usada para exibição, mas mantida no CSS caso queira reutilizar o estilo depois. */
       font-size: 0.95em;
       color: #333;
       text-align: center;
@@ -86,7 +87,7 @@
             --card-height: 60vh;
         }
         .card-image {
-            max-height: 60%;
+            max-height: 95%;
         }
         .card-description {
             font-size: 0.8em;
@@ -99,17 +100,15 @@
   <article class="flashcard" aria-label="Flashcard com imagens">
     <div class="card-inner">
       <div class="card-front">
-        <img class="card-image" src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/AdobeStock_185218200.jpeg">
-        <div class="card-description">
-          #ParaTodosVerem A imagem mostra a mão de uma pessoa segurando uma lata de spray preta com tampa laranja, aplicando tinta laranja sobre uma parede de tijolos.
+        <img class="card-image" 
+             src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/AdobeStock_185218200.jpeg"
+             alt="A imagem mostra a mão de uma pessoa segurando uma lata de spray preta com tampa laranja, aplicando tinta laranja sobre uma parede de tijolos.">
         </div>
-      </div>
       <div class="card-back">
-        <img class="card-image" src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/Mural_Etnias,_Panorama_(Eduardo_Kobra).jpg">
-        <div class="card-description">
-           #ParaTodosVerem A imagem mostra um extenso mural urbano ocupando toda a lateral de um grande paredão curvo em uma área pública aberta. O mural é composto por retratos de pessoas pintados com cores vivas e contrastantes, usando formas geométricas, uma característica marcante do estilo do artista Eduardo Kobra.
+        <img class="card-image" 
+             src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/Mural_Etnias,_Panorama_(Eduardo_Kobra).jpg"
+             alt="A imagem mostra um extenso mural urbano ocupando toda a lateral de um grande paredão curvo em uma área pública aberta. O mural é composto por retratos de pessoas pintados com cores vivas e contrastantes, usando formas geométricas, uma característica marcante do estilo do artista Eduardo Kobra.">
         </div>
-      </div>
     </div>
   </article>
 
