--- a/flashcard.html
+++ b/flashcard.html
@@ -102,12 +102,12 @@
       <div class="card-front">
         <img class="card-image" 
              src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/AdobeStock_185218200.jpeg"
-             alt="A imagem mostra a mão de uma pessoa segurando uma lata de spray preta com tampa laranja, aplicando tinta laranja sobre uma parede de tijolos.">
+             alt="Mão segurando uma lata de spray preta com tampa laranja, aplicando tinta laranja em uma parede de tijolos.">
         </div>
       <div class="card-back">
         <img class="card-image" 
              src="https://raw.githubusercontent.com/PUCPR4D/LogisticaInternacional/main/Mural_Etnias,_Panorama_(Eduardo_Kobra).jpg"
-             alt="A imagem mostra um extenso mural urbano ocupando toda a lateral de um grande paredão curvo em uma área pública aberta. O mural é composto por retratos de pessoas pintados com cores vivas e contrastantes, usando formas geométricas, uma característica marcante do estilo do artista Eduardo Kobra.">
+             alt="Mural de Eduardo Kobra mostrando múltiplos retratos em cores vibrantes e formas geométricas, ocupando um grande paredão curvo em área pública.">
         </div>
     </div>
   </article>
