--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -65,10 +65,10 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
       <div id="pontuacao" class="text-center text-gray-700 mb-6 font-normal uppercase text-sm"></div>
 
       <div class="flex flex-wrap justify-center gap-4 mb-6">
-        <button id="btn1" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(1)">Caso 1</button>
-        <button id="btn2" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(2)">Caso 2</button>
-        <button id="btn3" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(3)">Caso 3</button>
-        <button id="btn4" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(4)">Caso 4</button>
+        <button id="btn1" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(1)">Cenário 1</button>
+        <button id="btn2" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(2)">Cenário 2</button>
+        <button id="btn3" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(3)">Cenário 3</button>
+        <button id="btn4" class="text-white px-5 py-2 rounded-md transition duration-300 font-semibold" style="background-color: #6D64AE;" onmouseover="this.style.backgroundColor='#5e569a'" onmouseout="this.style.backgroundColor='#6D64AE'" onclick="mostrarCaso(4)">Cenário 4</button>
       </div>
 
       <div id="caixaCaso" class="bg-gray-50 p-6 rounded-md border border-gray-200 transition-all duration-500">
