--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -15,13 +15,16 @@
 <body class="p-6">
 
   <div class="max-w-4xl mx-auto">
-    <h1 class="text-4xl font-black uppercase text-center mb-8" style="color: #8a0538;">Fé em Perspectiva</h1>
+    <h1 class="text-4xl font-black uppercase text-center mb-8" style="color: #8a0538;">Laboratório de Decisão Ética e Tecnológica</h1>
 
     <div class="bg-white p-6 rounded-lg shadow-sm mb-8">
+      <p class="text-gray-700 mb-2">Compreender o impacto social e ético da tecnologia é uma competência fundamental para profissionais da educação. Em um mundo cada vez mais digital e diverso, decisões tecnológicas nunca são neutras: elas moldam acessos, silenciam vozes ou ampliam direitos. Desenvolver a capacidade de analisar criticamente essas ferramentas permite uma atuação mais consciente, empática e socialmente responsável, seja na escola, na gestão pública ou em outros espaços educativos.
+Este simulador propõe um treino prático para desenvolver essa sensibilidade crítica, colocando você diante de situações reais em que tecnologia, inclusão e ética se cruzam.</p>
       <h2 class="text-xl font-extrabold uppercase mb-3" style="color: #9654ff;">Sua tarefa:</h2>
-      <p class="text-gray-700 mb-2">1. Identifique as dimensões éticas e sociais[cite: 11].</p>
-      <p class="text-gray-700 mb-2">2. Relacione com conceitos de aula (empatia, inclusão)[cite: 11].</p>
-      <p class="text-gray-700">3. Proponha uma interpretação crítica[cite: 11].</p>
+      <p class="text-gray-700 mb-2">Analise os cenários apresentados e, para cada um deles:</p>
+      <p class="text-gray-700 mb-2">1.	Identifique quais dimensões sociais, éticas e educacionais estão presentes no caso (por exemplo: exclusão digital, vieses algorítmicos, acessibilidade, desigualdade estrutural, direitos humanos).</p>
+      <p class="text-gray-700 mb-2">2.	Relacione o cenário a pelo menos um conceito ou discussão abordada na aula (como preconceito, discriminação, empatia, empoderamento, tecnologia como ferramenta social)..</p>
+      <p class="text-gray-700"3.	Proponha uma breve interpretação crítica, explicando como o uso da tecnologia, naquele contexto, pode contribuir para a inclusão ou reforçar desigualdades, considerando o desenvolvimento humano e social.</p>
     </div>
     
     <div class="bg-white p-6 rounded-lg shadow-sm">
