--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -23,8 +23,9 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
       <h2 class="text-xl font-extrabold uppercase mb-3" style="color: #9654ff;">Sua tarefa:</h2>
       <p class="text-gray-700 mb-2">Analise os cenários apresentados e, para cada um deles:</p>
       <p class="text-gray-700 mb-2">1.	Identifique quais dimensões sociais, éticas e educacionais estão presentes no caso (por exemplo: exclusão digital, vieses algorítmicos, acessibilidade, desigualdade estrutural, direitos humanos).</p>
-      <p class="text-gray-700 mb-2">2.	Relacione o cenário a pelo menos um conceito ou discussão abordada na aula (como preconceito, discriminação, empatia, empoderamento, tecnologia como ferramenta social)..</p>
-      <p class="text-gray-700"3.	Proponha uma breve interpretação crítica, explicando como o uso da tecnologia, naquele contexto, pode contribuir para a inclusão ou reforçar desigualdades, considerando o desenvolvimento humano e social.</p>
+      <p class="text-gray-700 mb-2">2.	Relacione o cenário a pelo menos um conceito ou discussão abordada na aula (como preconceito, discriminação, empatia, empoderamento, tecnologia como ferramenta social).</p>
+      <p class="text-gray-700 mb-2">3.	Proponha uma breve interpretação crítica, explicando como o uso da tecnologia, naquele contexto, pode contribuir para a inclusão ou reforçar desigualdades, considerando o desenvolvimento humano e social.</p>
+      <p class="text-gray-700 mb-2">Essa análise será debatida com seus colegas na webconferência, ampliando o olhar coletivo e permitindo a construção de aprendizagens a partir de diferentes perspectivas.</p>   
     </div>
     
     <div class="bg-white p-6 rounded-lg shadow-sm">
