--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -33,10 +33,10 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
       <div id="pontuacao" class="text-center text-gray-700 mb-6 font-normal uppercase text-sm"></div>
 
       <div class="flex flex-wrap justify-center gap-4 mb-6">
-        <button id="btn1" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(1)">Caso 1</button>
-        <button id="btn2" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(2)">Caso 2</button>
-        <button id="btn3" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(3)">Caso 3</button>
-        <button id="btn4" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(4)">Caso 4</button>
+        <button id="btn1" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(1)">Cenário 1</button>
+        <button id="btn2" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(2)">Cenário 2</button>
+        <button id="btn3" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(3)">Cenário 3</button>
+        <button id="btn4" class="text-white px-5 py-2 rounded-md font-semibold" style="background-color: #6D64AE;" onclick="mostrarCaso(4)">Cenário 4</button>
       </div>
 
       <div id="caixaCaso" class="bg-gray-50 p-6 rounded-md border border-gray-200">
@@ -61,7 +61,8 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
 <script>
   const casos = {
     1: { 
-      descricao: "Plataforma Educacional Inclusiva: Exige internet constante e celulares modernos, dificultando acesso de alunos rurais e de baixa renda[cite: 18].", 
+      descricao: "Plataforma Educacional Inclusiva: Uma rede de ensino adota uma nova plataforma digital para aulas, avaliações e comunicação com estudantes e famílias. A ferramenta funciona bem em celulares modernos e exige conexão constante com a internet. Professores percebem, porém, que estudantes de áreas rurais, famílias de baixa renda e alunos com deficiência enfrentam dificuldades de acesso, atrasos nas atividades e exclusão das interações online.
+Apesar disso, a gestão argumenta que a plataforma é “tecnicamente avançada” e que os problemas se devem à falta de adaptação dos usuários.", 
       reflexao: "Eu não implementaria sem garantir acesso offline e proteção de dados, pois invisibiliza quem depende da escola para acessar tecnologia[cite: 20, 21, 23].",
       concluido: false 
     },
