--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -61,8 +61,7 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
 <script>
   const casos = {
     1: { 
-      descricao: "Plataforma Educacional Inclusiva: Uma rede de ensino adota uma nova plataforma digital para aulas, avaliações e comunicação com estudantes e famílias. A ferramenta funciona bem em celulares modernos e exige conexão constante com a internet. Professores percebem, porém, que estudantes de áreas rurais, famílias de baixa renda e alunos com deficiência enfrentam dificuldades de acesso, atrasos nas atividades e exclusão das interações online.
-Apesar disso, a gestão argumenta que a plataforma é “tecnicamente avançada” e que os problemas se devem à falta de adaptação dos usuários.", 
+      descricao: "Plataforma Educacional Inclusiva: Uma rede de ensino adota uma nova plataforma digital para aulas, avaliações e comunicação com estudantes e famílias. A ferramenta funciona bem em celulares modernos e exige conexão constante com a internet. Professores percebem, porém, que estudantes de áreas rurais, famílias de baixa renda e alunos com deficiência enfrentam dificuldades de acesso, atrasos nas atividades e exclusão das interações online. Apesar disso, a gestão argumenta que a plataforma é “tecnicamente avançada” e que os problemas se devem à falta de adaptação dos usuários.", 
       reflexao: "Eu não implementaria sem garantir acesso offline e proteção de dados, pois invisibiliza quem depende da escola para acessar tecnologia[cite: 20, 21, 23].",
       concluido: false 
     },
