--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -41,7 +41,7 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
 
       <div id="caixaCaso" class="bg-gray-50 p-6 rounded-md border border-gray-200">
         <h2 id="tituloCaso" class="text-xl font-extrabold mb-2 uppercase" style="color: #9654ff;">Escolha um cenário acima 👆</h2>
-        <p id="textoCaso" class="text-gray-600 mb-4 italic"></p>
+        <p id="textoCaso" class="text-gray-600 mb-4"></p>
 
         <div id="areaInteracao" style="display: none;">
           <textarea id="respostaAluno" class="w-full border rounded p-3 mb-4 text-gray-700 bg-white" rows="4" placeholder="Escreva sua análise crítica aqui..."></textarea>
