--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -66,7 +66,7 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
       concluido: false 
     },
     2: { 
-      descricao: "Aplicativo de Denúncia no Ambiente Escolar: Uma secretaria de educação lança um aplicativo para denúncias de bullying, racismo e discriminação. O app promete anonimato e rapidez, mas exige longos formulários escritos, não possui recursos de acessibilidade e não oferece retorno sobre o andamento das denúncias. Com o tempo, professores e estudantes relatam que apenas um grupo específico de usuários utiliza a ferramenta com frequência, enquanto outros simplesmente deixam de denunciar.", 
+      descricao: "Aplicativo de Denúncia no Ambiente Escolar: Uma secretaria de educação lança um aplicativo para denúncias de <i>bullying</i>, racismo e discriminação. O app promete anonimato e rapidez, mas exige longos formulários escritos, não possui recursos de acessibilidade e não oferece retorno sobre o andamento das denúncias. Com o tempo, professores e estudantes relatam que apenas um grupo específico de usuários utiliza a ferramenta com frequência, enquanto outros simplesmente deixam de denunciar.", 
       reflexao: "Eu implementaria a tecnologia, mas com ajustes importantes. A proposta é positiva porque cria um canal seguro de denúncia, especialmente para estudantes que têm medo de se expor. No entanto, podem estar sendo invisibilizados estudantes que não têm acesso fácil à internet ou que não dominam a linguagem digital, como crianças mais novas ou estudantes com deficiência intelectual. Um risco ético seria o uso inadequado das denúncias, seja por falsas acusações ou pela falta de retorno institucional, o que pode gerar descrédito e frustração. Para tornar a ferramenta realmente inclusiva, ela deveria estar integrada a ações educativas presenciais, ter acompanhamento de profissionais da escola e oferecer acessibilidade, como leitura por áudio e linguagem simples.",
       concluido: false 
     },
@@ -144,9 +144,9 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
       if (casos[i].concluido) completados++;
     }
 
-    pontuacao.textContent = `Casos concluídos: ${completados} / 4 [cite: 42]`;
+    pontuacao.textContent = `Casos concluídos: ${completados} / ;
     if (completados === 4) {
-      document.getElementById("medalha").innerHTML = "🏅 Atividade Concluída com Sucesso! [cite: 43]";
+      document.getElementById("medalha").innerHTML = "🏅 Atividade Concluída com Sucesso!";
     }
   }
 
