--- a/laboratorio_decisao_etica_tecnologica.html
+++ b/laboratorio_decisao_etica_tecnologica.html
@@ -144,7 +144,7 @@ Este simulador propõe um treino prático para desenvolver essa sensibilidade cr
       if (casos[i].concluido) completados++;
     }
 
-    pontuacao.textContent = `Casos concluídos: ${completados} / ;
+    pontuacao.textContent = `Casos concluídos: ${completados}/ 4`;
     if (completados === 4) {
       document.getElementById("medalha").innerHTML = "🏅 Atividade Concluída com Sucesso!";
     }
